File chooser: Correct handling of JS-files in Firefox
Firefox does not support the MIME type "text/javascript" as defined
in RFC 9239 in the accept-attribute of input fields of type "file".
This means that setting "js" as an allowed file extension on the
Scout field is being ignored. This presents the user with a faulty
default setting on the file chooser.

See also Bugzilla 2014180.

432191